--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>R8 Custom</title>
 </head>
@@ -13,9 +14,9 @@
         <ul>
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./comprar.html">Compra tu auto</a></li>
-            <li><a href="#detailing">Detailing</a></li>
-            <li><a href="#gestoria">Gestoria</a></li>
-            <li><a href="#redes">Redes Sociales</a></li>
+            <li><a href="./detailing.html">Detailing</a></li>
+            <li><a href="./gestoria.html">Gestoria</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <header>
@@ -48,21 +49,22 @@
         <th><a href="https://www.facebook.com/" target="_blank">Facebook</a></th>
         <img class="logofb" src="https://brandemia.org/sites/default/files/inline/images/facebook_logo_portada.jpg" alt="">
     </section>
-    
-</body>
-<footer>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./comprar.html">Compra tu auto</a></li>
-            <li><a href="#detailing">Detailing</a></li>
-            <li><a href="#gestoria">Gestoria</a></li>
-            <li><a href="#redes">Redes Sociales</a></li>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./comprar.html">Compra tu auto</a></li>
+                <li><a href="#detailing">Detailing</a></li>
+                <li><a href="#gestoria">Gestoria</a></li>
+                <li><a href="#redes">Redes Sociales</a></li>
+            </ul>
+        </nav>
+        <ul class="infofinal">
+            <li>Whatsapp: 11111111</li>
+            <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
         </ul>
-    </nav>
-    <ul class="infofinal">
-        <li>Whatsapp: 11111111</li>
-        <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
-    </ul>
-</footer>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+</body>
 </html>
