--- a/index.html
+++ b/index.html
@@ -22,12 +22,39 @@
     <header>
         <h1>Novedades</h1>
         <section class="novedad">
-            <img src="./audi.jpg" alt="">
-            <img src="./toyotacorola.jpg" alt="toyota">
-            <img src="./renaultduster.jpg" alt="renaultduster">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./audi.jpg" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Audi S3</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>        
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./bmwcoupe.jpg" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">BMW Coupe</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./fordfocus.jpg" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">Ford Focus</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
         </section>
-    </header>
     <section>
+    </header>
+
         <h1>Sobre nosotros</h1>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.loremLorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.lorem </p>
     </section>
@@ -42,21 +69,14 @@
         <h1 id="gestoria">Gestoria</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, tenetur illo ipsam ab qui commodi perspiciatis unde consequatur. Ipsa, incidunt cumque! Fugit, voluptatem? Hic dolorum fugit possimus quo blanditiis reiciendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptate non quis nihil adipisci tempore neque rem animi illum fugit, delectus odio, possimus facilis saepe atque a quaerat repellendus voluptatem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis in ex corporis assumenda sed asperiores nemo itaque similique mollitia voluptates tenetur ad unde quia ea, repudiandae consectetur dolor dolore! Eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus incidunt, omnis asperiores aut minima suscipit voluptatibus laudantium, a cumque sapiente atque vero tempore autem, distinctio delectus iure assumenda nostrum cupiditate?</p>
     </section>
-    <section class="redes">
-        <h1 id=redes>Nuestras redes sociales</h1>
-        <th><a href="https://www.instagram.com/" target="_blank">Instagram</a></th>
-        <img class="logoig" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png" alt="m">
-        <th><a href="https://www.facebook.com/" target="_blank">Facebook</a></th>
-        <img class="logofb" src="https://brandemia.org/sites/default/files/inline/images/facebook_logo_portada.jpg" alt="">
-    </section>
     <footer>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./comprar.html">Compra tu auto</a></li>
-                <li><a href="#detailing">Detailing</a></li>
-                <li><a href="#gestoria">Gestoria</a></li>
-                <li><a href="#redes">Redes Sociales</a></li>
+                <li><a href="./detailing.html">Detailing</a></li>
+                <li><a href="./gestoria.html">Gestoria</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <ul class="infofinal">
