--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,22 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    
+    <div class="container-fluid">
+        <div class="row g-3">
+            <div class="col-6 col-md-6">
+                <img src="./wp.png" alt="" width="100">
+            </div>
+            <div class="col-6 col-md-6">
+                <img src="./tw.png" alt="" width="100">
+            </div>
+            <div class="col-6 col-md-6">
+                <img src="./ig.png" alt="" width="100">
+            </div>
+            <div class="col-6 col-md-6">
+                <img src="./fb.png" alt="" width="100">
+            </div>
+        </div>
+    </div>
     <footer>
         <ul class="infofinal">
             <li>Whatsapp: 11111111</li>
