--- a/detailing.html
+++ b/detailing.html
@@ -19,11 +19,49 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <div class="conteiner-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h1>Opcion 1</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 2</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 3</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 4</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 5</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 6</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 7</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <h1>Opcion 8</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            </div>
+        </div>
+    </div>
     <footer>
         <ul class="infofinal">
             <li>Whatsapp: 11111111</li>
             <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
