--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <header>
         <h1>Novedades</h1>
-        <section class="novedad">
+        <section>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
@@ -53,7 +52,6 @@
                     </div>
         </section>
     <section>
-    </header>
 
         <h1>Sobre nosotros</h1>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.loremLorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.lorem </p>
