--- a/contacto.html
+++ b/contacto.html
@@ -9,16 +9,33 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="menu">
-        <img src="./r8logo.jpg" alt="R8">
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./comprar.html">Compra tu auto</a></li>
-            <li><a href="./detailing.html">Detailing</a></li>
-            <li><a href="./gestoria.html">Gestoria</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+    <nav class="navbar sticky-top navbar-dark bg-black">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./comprar.html">Compra tu auto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./detailing.html">Detailing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gestoria.html">Gestoria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container-fluid">
         <div class="row g-3">
             <div class="col-6 col-md-6">
