--- a/comprar.html
+++ b/comprar.html
@@ -9,16 +9,33 @@
     <title>Catalogo de Autos</title>
 </head>
 <body>
-    <nav class="menu">
-        <img src="./r8logo.jpg" alt="R8">
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./comprar.html">Compra tu auto</a></li>
-            <li><a href="./detailing.html">Detailing</a></li>
-            <li><a href="./gestoria.html">Gestoria</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+    <nav class="navbar sticky-top navbar-dark bg-black">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./comprar.html">Compra tu auto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./detailing.html">Detailing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gestoria.html">Gestoria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <main>
         <h1>Autos Usados</h1>
         <div class="container-fluid">
@@ -89,7 +106,7 @@
             <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
         </ul>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
