--- a/contacto.html
+++ b/contacto.html
@@ -39,16 +39,16 @@
     <div class="container-fluid">
         <div class="row g-3">
             <div class="col-6 col-md-6">
-                <img src="./wp.png" alt="" width="100">
+                <img src="./wp.png" alt="whatsapp" width="100">
             </div>
             <div class="col-6 col-md-6">
-                <img src="./tw.png" alt="" width="100">
+                <img src="./tw.png" alt="twitter" width="100">
             </div>
             <div class="col-6 col-md-6">
-                <img src="./ig.png" alt="" width="100">
+                <img src="./ig.png" alt="instagram" width="100">
             </div>
             <div class="col-6 col-md-6">
-                <img src="./fb.png" alt="" width="100">
+                <img src="./fb.png" alt="facebook" width="100">
             </div>
         </div>
     </div>
