--- a/detailing.html
+++ b/detailing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Detailing</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-dark bg-black">
@@ -36,39 +36,40 @@
           </div>
         </div>
       </nav>
+      <h1 class="detailing-titulo">Servicios de Detailing</h1>
     <div class="conteiner-fluid">
         <div class="row">
             <div class="col-12 col-md-6">
-                <h1>Opcion 1</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+                <h4>Opcion 1</h4>
+                <p>Lavado de carroceria.</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 2</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+                <h4>Opcion 2</h4>
+                <p>Descontaminacion</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 3</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 3</h4>
+                <p>Polarizado</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 4</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 4</h4>
+                <p>Pulido</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 5</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 5</h4>
+                <p>Correccion de pintura</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 6</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 6</h4>
+                <p>Sellado</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 7</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 7</h4>
+                <p>Encerado</p>
             </div>
             <div class="col-12 col-md-6">
-                <h1>Opcion 8</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+              <h4>Opcion 8</h4>
+                <p>Colocacion de vinilo </p>
             </div>
         </div>
     </div>
