--- a/gestoria.html
+++ b/gestoria.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Gestoria</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-dark bg-black">
@@ -36,19 +36,26 @@
           </div>
         </div>
       </nav>
+      <h1>Gestoria</h1>
     <div class="conteiner">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            <div class="col-12">
+                <h4>Nos dedicamos a promover y realizar diferentes tramites en los registros de la propiedad automotor, direcciones de rentas dependencias policiales, oficinas municipales o compañias aseguradoras. Guiamos el completamiento de formularios con la utilizacion del mismo y realizamos analisis juridicos de los vehiculos.</h4>
             </div>
-            <div class="col-12 col-md-6">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            <div class="col-12">
+              <h4>¿Que tramites que realizamos?</h4>
             </div>
-            <div class="col-12 col-md-6">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
-            </div>
-            <div class="col-12 col-md-6">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum reprehenderit cupiditate eius sint, nam nobis culpa eos ad, officia praesentium repellendus sit perferendis magni ab doloribus natus nisi, laborum tempora?</p>
+            <div class="col-12">
+              <ul>
+                <li>Transferencias de automotores y motovehículos.</li>
+                <li>Inscripciones de vehiculos 0km o usados (nacionales o importados).</li>
+                <li>Anotaciones y cancelaciones de prendas, embargos, oficios judiciales.</li>
+                <li>Altas y bajas de motor.</li>
+                <li>Denuncias de venta, robo o hurto.</li>
+                <li>Cambios de radicación.</li>
+                <li>Informes de dominio.</li>
+                <li>Duplicados de cédulas, patentes y títulos.</li>
+              </ul>
             </div>
         </div>
     </div>
