--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>R8 Custom</title>
+    <title>R8 Custom Vehiculos Usados Detailing</title>
 </head>
 <body id="inicio">
     <nav class="navbar sticky-top navbar-dark bg-black">
@@ -36,13 +36,13 @@
           </div>
         </div>
       </nav>
-        <h1>Novedades</h1>
+        <h2>Novedades</h2>
         <section>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
-                            <img src="./audi.jpg" alt="">
+                            <img src="./audi.jpg" alt="audi">
                             <div class="card-body">
                                 <h5 class="card-title">Audi S3</h5>
                                 <a href="#" class="btn btn-primary">Comprar</a>
@@ -51,7 +51,7 @@
                     </div>        
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
-                            <img src="./bmwcoupe.jpg" alt="">
+                            <img src="./bmwcoupe.jpg" alt="bmw">
                             <div class="card-body">
                                 <h5 class="card-title">BMW Coupe</h5>
                                 <a href="#" class="btn btn-primary">Comprar</a>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
-                            <img src="./fordfocus.jpg" alt="">
+                            <img src="./fordfocus.jpg" alt="ford">
                             <div class="card-body">
                                 <h5 class="card-title">Ford Focus</h5>
                                 <a href="#" class="btn btn-primary">Comprar</a>
@@ -70,19 +70,12 @@
         </section>
     <section>
 
-        <h1>Sobre nosotros</h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.loremLorem ipsum dolor sit amet consectetur adipisicing elit. Quis reiciendis odit laudantium, vel unde cupiditate adipisci dolorem atque tenetur pariatur perspiciatis excepturi impedit voluptatibus accusantium blanditiis quam ducimus eos in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque veniam consequuntur! Sunt officia odit reprehenderit minus! Culpa natus exercitationem omnis amet non velit similique cum, recusandae cumque, autem nulla.lorem </p>
-    </section>
-    <section class="servicios">
-        <h1 id="detailing">Servicios de Detailing</h1>
-            <p>Lavado de carroceria: Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis minus consequuntur quia dolorum hic libero repellat eaque saepe dolor voluptatibus voluptatum, odit non nihil beatae qui, similique laudantium sint?</p>
-            <p>Descontaminacion: Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ullam veniam blanditiis, iure asperiores incidunt ex doloribus ratione enim facere dolore autem, illum minus, consequatur aspernatur temporibus quod ipsum ut.</p>
-            <p>Pulido y correccion de pintura: Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ipsum voluptatum aspernatur porro perspiciatis optio rem. Doloremque atque, ipsam accusamus quos veniam repellat itaque ipsum sed, libero qui unde assumenda.</p>
-            <p>Sellado y encerado: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates laudantium nihil eius amet eligendi voluptatem dignissimos, corrupti neque totam expedita quae doloribus quod esse blanditiis nemo temporibus numquam soluta perspiciatis!</p>
+        <h2>Sobre nosotros</h2>
+        <p>R8 Custom es una emprendimiento familiar que nace del fanatismo por los autos, empezo en el 2003 con la venta de autos usados y hoy sigue buscando expandirse y tener cada vez mas servicios que brindar del mundo automotor.</p>
     </section>
     <section>
-        <h1 id="gestoria">Gestoria</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, tenetur illo ipsam ab qui commodi perspiciatis unde consequatur. Ipsa, incidunt cumque! Fugit, voluptatem? Hic dolorum fugit possimus quo blanditiis reiciendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptate non quis nihil adipisci tempore neque rem animi illum fugit, delectus odio, possimus facilis saepe atque a quaerat repellendus voluptatem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis in ex corporis assumenda sed asperiores nemo itaque similique mollitia voluptates tenetur ad unde quia ea, repudiandae consectetur dolor dolore! Eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus incidunt, omnis asperiores aut minima suscipit voluptatibus laudantium, a cumque sapiente atque vero tempore autem, distinctio delectus iure assumenda nostrum cupiditate?</p>
+        <h2 id="gestoria">Gestoria</h2>
+        <p>Nos dedicamos a promover y realizar diferentes tramites en los registros de la propiedad automotor, direcciones de rentas dependencias policiales, oficinas municipales o compañias aseguradoras. Guiamos el completamiento de formularios con la utilizacion del mismo y realizamos analisis juridicos de los vehiculos.</p>
     </section>
     <footer>
         <nav>
