--- a/detailing.html
+++ b/detailing.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar sticky-top navbar-dark bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img src="./r8logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,48 +37,42 @@
         </div>
       </nav>
       <h1 class="detailing-titulo">Servicios de Detailing</h1>
-    <div class="conteiner-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <h4>Opcion 1</h4>
-                <p>Lavado de carroceria.</p>
-            </div>
-            <div class="col-12 col-md-6">
-                <h4>Opcion 2</h4>
-                <p>Descontaminacion</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 3</h4>
-                <p>Polarizado</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 4</h4>
-                <p>Pulido</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 5</h4>
-                <p>Correccion de pintura</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 6</h4>
-                <p>Sellado</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 7</h4>
-                <p>Encerado</p>
-            </div>
-            <div class="col-12 col-md-6">
-              <h4>Opcion 8</h4>
-                <p>Colocacion de vinilo </p>
-            </div>
+ <main class="opcionesdetailing">
+  <div class="conteiner-fluid">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <h4>Lavado de carroceria</h4>
+        </div>
+        <div class="col-12 col-md-6">
+            <h4>Descontaminacion</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Polarizado</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Pulido</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Correccion de pintura</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Sellado</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Encerado</h4>
+        </div>
+        <div class="col-12 col-md-6">
+          <h4>Colocacion de vinilo</h4>
         </div>
     </div>
-    <footer>
-        <ul class="infofinal">
-            <li>Whatsapp: 11111111</li>
-            <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
-        </ul>
-    </footer>
+</div>
+ </main>
+  <div class="ejemplosdetailing">
+    <div><img src="./pulido.jpg" alt=""></div>
+    <div><img src="./hidrolavado.jpg" alt=""></div>
+    <div><img src="./tapizado.jpg" alt=""></div>
+    <div><img src="./lavadorueda.jpg" alt=""></div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
