--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="inicio">
     <nav class="navbar sticky-top navbar-dark bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img src="./r8logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -36,9 +36,9 @@
           </div>
         </div>
       </nav>
-        <h2>Novedades</h2>
         <section>
             <div class="container-fluid">
+              <h1>Novedades</h1>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
@@ -69,12 +69,11 @@
                     </div>
         </section>
     <section>
-
         <h2>Sobre nosotros</h2>
         <p>R8 Custom es una emprendimiento familiar que nace del fanatismo por los autos, empezo en el 2003 con la venta de autos usados y hoy sigue buscando expandirse y tener cada vez mas servicios que brindar del mundo automotor.</p>
     </section>
     <section>
-        <h2 id="gestoria">Gestoria</h2>
+        <h2>Gestoria</h2>
         <p>Nos dedicamos a promover y realizar diferentes tramites en los registros de la propiedad automotor, direcciones de rentas dependencias policiales, oficinas municipales o compañias aseguradoras. Guiamos el completamiento de formularios con la utilizacion del mismo y realizamos analisis juridicos de los vehiculos.</p>
     </section>
     <footer>
@@ -87,11 +86,6 @@
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
-        <ul class="infofinal">
-            <li>Whatsapp: 11111111</li>
-            <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
-        </ul>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
