--- a/contacto.html
+++ b/contacto.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Contactos</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-dark bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img src="./r8logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -36,28 +36,14 @@
           </div>
         </div>
       </nav>
-    <div class="container-fluid">
-        <div class="row g-3">
-            <div class="col-6 col-md-6">
-                <img src="./wp.png" alt="whatsapp" width="100">
-            </div>
-            <div class="col-6 col-md-6">
-                <img src="./tw.png" alt="twitter" width="100">
-            </div>
-            <div class="col-6 col-md-6">
-                <img src="./ig.png" alt="instagram" width="100">
-            </div>
-            <div class="col-6 col-md-6">
-                <img src="./fb.png" alt="facebook" width="100">
-            </div>
-        </div>
-    </div>
+      <h1>Nuestras redes sociales</h1>
+      <div class="redes">
+        <div class="instagram"><img src="./ig.png" alt=""></div>
+        <div class="facebook"><img src="./fb.png" alt=""></div>
+        <div class="twitter"><img src="./tw.png" alt=""></div>
+        <div class="whatsapp"><img src="./wp.png" alt=""></div>
+      </div>
     <footer>
-        <ul class="infofinal">
-            <li>Whatsapp: 11111111</li>
-            <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
-        </ul>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
