--- a/gestoria.html
+++ b/gestoria.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar sticky-top navbar-dark bg-black">
         <div class="container-fluid">
-          <a class="navbar-brand" href="Sticky top"><img src="./r8logo.jpg" alt=""></a>
+          <a class="navbar-brand" href="./index.html"><img src="./r8logo.jpg" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -59,12 +59,6 @@
             </div>
         </div>
     </div>
-    <footer>
-        <ul class="infofinal">
-            <li>Whatsapp: 11111111</li>
-            <li>Horario de atencion: Lunes a viernes de 10 a 18hs</li>
-        </ul>
-    </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
